# Modern-Computer-Vision-with-PyTorch-2E

./: .gitignore  main.py  pyproject.toml
Chapter01/: Back_propagation.ipynb  Chain_rule.ipynb  Feed_forward_propagation.ipynb  Gradient_descent.ipynb  Learning_rate.ipynb
Chapter02/: Auto_gradient_of_tensors.ipynb  Building_a_neural_network_using_PyTorch_on_a_toy_dataset.ipynb  Fetching_values_of_intermediate_layers.ipynb  Implementing_custom_loss_function.ipynb  Initializing_a_tensor.ipynb  Numpy_Vs_Torch_object_computation_speed_comparison.ipynb  Operations_on_tensors.ipynb  Sequential_method_to_build_a_neural_network.ipynb  Specifying_batch_size_while_training_a_model.ipynb  mymodel.pth  mymodels.pth  save_and_load_pytorch_model.ipynb
Chapter03/: Batch_normalization.ipynb  Impact_of_building_a_deeper_neural_network.ipynb  Impact_of_dropout.ipynb  Impact_of_regularization.ipynb  Inspecting_color_images.ipynb  Inspecting_grayscale_images.ipynb  Learning_rate_annealing.ipynb  Preparing_our_data.ipynb  Scaling_the_dataset.ipynb  Steps_to_build_a_neural_network_on_FashionMNIST.ipynb  Varying_batch_size.ipynb  Varying_loss_optimizer.ipynb
Chapter04/: CNN_on_FashionMNIST.ipynb  CNN_working_details.ipynb  Cats_Vs_Dogs.ipynb  Data_augmentation_with_CNN.ipynb  Image_augmentation.ipynb  Issues_with_image_translation.ipynb  Time_comparison_of_augmentation_scenario.ipynb  Visualizing_the_filters'_learning.ipynb  kaggle.json
Chapter05/: Facial_keypoints_detection.ipynb  Implementing_ResNet18_for_image_classification.ipynb  Implementing_VGG16_for_image_classification.ipynb  (+2 more)
