[project]
name = "modern-computer-vision-with-pytorch-2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
]
